--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,57 @@
+.app-login {
+  -ms-flex-item-align: center;
+      align-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 30%;
+}
+.login-facebook,
+.login-google {
+  width: 60%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50px;
+          flex: 0 1 50px;
+  margin: 5px;
+  border-radius: 5px;
+  border: 0;
+  font-size: 1rem;
+  padding: 0px 15px;
+}
+.login-create-account {
+  color: #00f;
+}
+.login-p {
+  font-size: 1rem;
+  width: 60%;
+  text-align: center;
+}
+@import url("https://fonts.googleapis.com/css?family=Lato|Open+Sans");
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Lato;
+  line-height: 1.25rem;
+}
+#root {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+[class$="title"] {
+  font-family: "Open Sans";
+}
 .new-timer {
   display: -webkit-box;
   display: -ms-flexbox;
