--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -2,7 +2,7 @@
 	align-self center
 	{$flex-col-wrap}
 	align-items center
-	margin-top 30%
+	justify-content space-between
 
 .login-facebook,
 .login-google
@@ -13,10 +13,11 @@
 	border 0
 	font-size 1rem
 	padding 0px 15px
-	// align-self flex-end
 
 .login-create-account
 	color blue
+	&:hover
+		text-decoration underline
 
 .login-p
 	font-size 1rem
