--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -1,6 +1,6 @@
 .app-login
 	align-self center
-	{$flex-col-wrap}
+{$flex-col-wrap}
 	align-items center
 	justify-content space-between
 
@@ -18,6 +18,7 @@
 	color blue
 	&:hover
 		text-decoration underline
+		cursor pointer
 
 .login-p
 	font-size 1rem
