--- a/src/css/_profile.styl
+++ b/src/css/_profile.styl
@@ -13,9 +13,30 @@
 		
 .profile-info
 	flex 0 1 45%
-	font-size 1.25rem
+	{$flex-row-wrap}
 	& > p
-		margin 15px
+		margin 10px
+		font-size 1.15rem
+		flex 0 1 75%
+		
+.profile-info-form
+	flex 0 1 80%
+	{$flex-row-wrap}
+	align-items center
+	justify-content space-between
+
+.profile-button
+	flex 0 1 75%
+	margin-top 15px
 	
-// [class^="profile-"]
-// 	
+.profile-label
+	flex 0 1 20%
+	text-align right
+	
+.profile-input
+	flex 0 1 70%
+
+.profile-edit-button
+	flex 0 1 75%
+	align-self flex-end
+	
