--- a/src/css/_footer.styl
+++ b/src/css/_footer.styl
@@ -1,14 +1,27 @@
-.app-footer
+.footer
 	align-self flex-end
 	width 100%
-	font-size 0.9rem
+	font-size 1rem
 	{$flex-row-wrap}
-	justify-content space-around
+	justify-content space-between
+	z-index 1
 
 .footer-item
-	flex 0 1 40%
-	margin-bottom 10px
+	flex 1 1 25%
 	text-align center
-	color black
-	background-color yellow
+	color $black4
+	background-color $black0
 	padding 10px
+	transition 0.5s all ease
+	&:active,
+	&:focus
+		color $white
+		text-decoration none
+		background-color $black3
+		
+
+// .footer-completed::after
+// 	content ''
+// 	height 100%
+// 	border 2px solid $white
+// 	padding 10px
