--- a/src/css/_settings.styl
+++ b/src/css/_settings.styl
@@ -11,6 +11,7 @@
 	{$flex-row-wrap}
 	justify-content space-between
 	align-items center
+	color $black4
 
 .settings-label
 	font-size 0.9rem
@@ -18,10 +19,24 @@
 	text-align right
 
 .settings-input
-	flex 0 1 45%
+	flex 0 1 50%
 	height 30px !important
+	border-radius 2px !important
+	border 2px solid $white !important
+	background-color transparent !important
+	color $pink !important
+	&:focus,
+	&:active
+		color $white !important
+		outline none !important
+		box-shadow 0px 0px 1px 1px $white !important
 
 .settings-description
-	font-size 1rem
+	font-size 1.25rem
 	width 70%
 	margin-bottom 25px
+	color $white
+	text-align center
+	line-height 1.5rem
+	& > span
+		color $pink
