--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -3,29 +3,49 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans');
 
+body {
+	background-color $black1
+}
+
 * {
 	margin 0
 	padding 0
-	font-family Lato
-	line-height 1.25rem
+	font-family $content
+	// line-height 1.25rem
 }
 
-body {
-	background-color pink
-}
+h1
+	font-size 2rem !important
+	font-family $title
+	color $white
+	
+h2
+	font-size 1.75rem !important
+	font-family $title
+	color $white
+	
+h3
+	font-size 1.5rem !important
+	font-family $title
 
 #root
-	display flex
-	justify-content center
+	height 100vh
 	& > div
 		{$flex-row-wrap}
-		flex 0 1 97.5%
+		width 100%
 		justify-content center
-		align-items space-between
-		height 100vh
+		// align-items space-between
+		height 100%
 
 [class$="title"]
 	font-family "Open Sans"
+	
+[class^="app-"]
+	height 80vh
+
+p,
+label
+	font-family $content
 
 .new-timer
 	{$flex-row-wrap}
@@ -61,3 +81,6 @@ body {
 
 .line-across
 	border 3px solid black
+
+// input:focus
+// 	outline none !important
