body has height 100vh, display flex... let's see if it matters

--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -15,7 +15,8 @@
 	padding 0px 15px
 
 .login-create-account
-	color blue
+	color $blue
+	text-decoration underline
 	&:hover
 		text-decoration underline
 		cursor pointer
@@ -24,3 +25,4 @@
 	font-size 1rem
 	width 60%
 	text-align center
+	color $black4
