--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -5,6 +5,9 @@
 
 body {
 	background-color $black1
+	display flex
+	align-items center
+	height 100vh
 }
 
 * {
@@ -29,7 +32,7 @@ h3
 	font-family $title
 
 #root
-	height 100vh
+	// height 100vh
 	& > div
 		{$flex-row-wrap}
 		width 100%
