--- a/src/css/_profile.styl
+++ b/src/css/_profile.styl
@@ -1,9 +1,9 @@
-.app-profile
-	height 80%
+// .app-profile
+// 	height 80%
 
 .app-profile__edit,
 .app-profile__static
-	height 100%
+	// height 100%
 	flex 0 1 100%
 	{$flex-row-wrap}
 	justify-content center
@@ -74,7 +74,7 @@
 		
 .profile-input-toggle
 	flex 0 1 70%
-	height 30px !important
+	// height 30px !important
 	border-radius 2px !important
 	display flex
 	justify-content flex-start
