--- a/src/css/style.css
+++ b/src/css/style.css
@@ -182,7 +182,6 @@
 }
 .header-logout-button {
   color: #dbcdc9;
-  height: 100%;
   background-color: #7a2b1d;
   padding: 10px;
 }
@@ -221,7 +220,8 @@
   padding: 0px 15px;
 }
 .login-create-account {
-  color: #00f;
+  color: #7a8897;
+  text-decoration: underline;
 }
 .login-create-account:hover {
   text-decoration: underline;
@@ -231,13 +231,10 @@
   font-size: 1rem;
   width: 60%;
   text-align: center;
-}
-.app-profile {
-  height: 80%;
+  color: #a5a5a5;
 }
 .app-profile__edit,
 .app-profile__static {
-  height: 100%;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 100%;
           flex: 0 1 100%;
@@ -370,7 +367,6 @@ img {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 70%;
           flex: 0 1 70%;
-  height: 30px !important;
   border-radius: 2px !important;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -585,6 +581,13 @@ $
 @import url("https://fonts.googleapis.com/css?family=Lato|Open+Sans");
 body {
   background-color: #161616;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
 }
 * {
   margin: 0;
@@ -604,9 +607,6 @@ h2 {
 h3 {
   font-size: 1.5rem !important;
   font-family: Lato;
-}
-#root {
-  height: 100vh;
 }
 #root > div {
   display: -webkit-box;
